SM-931 PMD/CheckStyle errors for servicemix-eip
git-svn-id: https://svn.apache.org/repos/asf/incubator/servicemix/trunk/deployables/serviceengines/servicemix-eip@527473 13f79535-47bb-0310-9956-ffa450edef68